--- a/app/globals.css
+++ b/app/globals.css
@@ -43,9 +43,12 @@
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     @apply bg-[--bg-gradient] bg-cover bg-[50%] bg-repeat h-full text-[--color-foreground];
+    background-image: var(--bg-gradient);
+    @apply bg-cover bg-[50%] bg-repeat;
   }
 
   h1 {
+    font-family: var(--font-ibmplexsans), sans-serif;
     @apply text-4xl font-bold text-white md:text-5xl lg:text-7xl;
   }
 
@@ -98,9 +101,12 @@
   }
 }
 
-@layer base {
-  body {
-    background-image: var(--bg-gradient);
-    @apply bg-cover bg-[50%] bg-repeat;
+@layer utilities {
+  .font-ibm {
+    font-family: var(--font-ibmplexsans), sans-serif;
+  }
+
+  .font-inter {
+    font-family: var(--font-inter), sans-serif;
   }
 }
